--- a/_includes/header-full.scss
+++ b/_includes/header-full.scss
@@ -124,7 +124,7 @@ header {
       margin: 0px;
       top: 0px;
       left: unset;
-      transform: translateX(100vw);
+      transform: translateX(-100vw);
       right: 0px;
       flex-direction: column;
       align-items: flex-start;
