--- a/assets/css/article.scss
+++ b/assets/css/article.scss
@@ -7,10 +7,13 @@
 main {
   width: 90%;
   max-width: 850px;
-  padding: 0px 20px;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  padding: 0px;
+  // position: absolute;
+  // left: 50%;
+  // transform: translateX(-50%);
+  box-sizing: border-box;
+  display: block;
+  margin: 0 auto;
   margin-bottom: 20px;
   img {
     max-width: 80%;
@@ -85,6 +88,9 @@ main {
       line-height: 1.5em;
       text-indent: 1em;
       color: #242424;
+    }
+    .noindent {
+      text-indent: 0px;
     }
     .noindent>p {
       text-indent: 0px;
